--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
