--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "formik": "^2.4.5",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
