feat:next auth, init prisma, make caregort api

--- a/.env
+++ b/.env
@@ -4,4 +4,10 @@ GOOGLE_CLIENT_ID=386373669657-451anflr4dqjcnknc86ub65dcaknhi5n.apps.googleuserco
 NEXTAUTH_URL= http://localhost:3000
 
 
+# PJqsKujYo1AaisiM
+# ali
+
+DATABASE_URL=mongodb+srv://ali:PJqsKujYo1AaisiM@expressnode.phhwydj.mongodb.net/blog?retryWrites=true&w=majority
+
+
          
