--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.4.0",
+    "@prisma/client": "^5.10.1",
     "@reduxjs/toolkit": "^2.2.1",
     "formik": "^2.4.5",
     "next": "14.1.0",
@@ -28,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.10.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
