--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.4.0",
     "@prisma/client": "^5.10.1",
     "@reduxjs/toolkit": "^2.2.1",
+    "cloudinary": "^2.0.1",
     "formik": "^2.4.5",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "yup": "^1.3.3"
   },
@@ -30,7 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
-    "prisma": "^5.10.1",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
