--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.4.0",
-    "@prisma/client": "^5.10.1",
+    "@prisma/client": "^5.10.2",
     "@reduxjs/toolkit": "^2.2.1",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.1",
     "formik": "^2.4.5",
     "next": "14.1.0",
@@ -25,6 +26,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
