--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
