--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
+    "react-slick": "^0.30.2",
+    
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
