--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-slick": "^0.30.2",
-    
+    "swiper": "^11.1.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
